--- a/Four_Stock/Untitled.ipynb
+++ b/Four_Stock/Untitled.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "# ARIMA and Seasonal ARIMA\n",
+    "# Stock Prediction using ARIMA and Seasonal ARIMA\n",
     "\n",
     "\n",
     "## Autoregressive Integrated Moving Averages\n",
@@ -17,7 +17,6 @@
     "* Construct the ARIMA Model or Seasonal ARIMA based on the data\n",
     "* Use the model to make predictions\n",
     "\n",
-    "Let's go through these steps!"
    ]
   },
   {
@@ -725,7 +724,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 2: Visualize the Data"
+    "## Visualize the Data"
    ]
   },
   {
